--- a/www/nspluginwrapper/Makefile
+++ b/www/nspluginwrapper/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/03/22 22:33:45 abs Exp $
+# $NetBSD: Makefile,v 1.2 2007/03/23 08:24:37 hira Exp $
 #
 
 DISTNAME=       nspluginwrapper-0.9.91.3
@@ -18,7 +18,7 @@ CONFIGURE_ARGS+= --prefix=${PREFIX} --x11=${X11BASE}
 
 RPMFILE=	${DISTNAME:S:-:-i386-:}-1.x86_64.rpm
 BUILD_DEPENDS+=	rpm2pkg>=1.2:../../pkgtools/rpm2pkg
-RPM2PKG=	rpm2pkg
+RPM2PKG=	${PREFIX}/sbin/rpm2pkg
 RPM2PKGARGS=	${DISTDIR}/${DIST_SUBDIR}/${RPMFILE}
 LINUXLIBDIR=	${PREFIX}/lib/nspluginwrapper/i386/linux
 
