--- a/emulators/suse100_compat/Makefile.x86_64
+++ b/emulators/suse100_compat/Makefile.x86_64
@@ -1,4 +1,5 @@
-# $NetBSD: Makefile.i386,v 1.1 2006/01/08 16:53:21 salo Exp $
+# $NetBSD: Makefile.x86_64,v 1.1.1.1 2006/03/09 20:34:38 tonio Exp $
 
 RPMFILES=		compat-2004.11.13-4.${SUSE_ARCH}.rpm \
+			compat-g77-3.3.5-2.${SUSE_ARCH}.rpm \
 			compat-libstdc++-5.0.7-6.${SUSE_ARCH}.rpm
