--- a/fonts/vera-ttf/Makefile
+++ b/fonts/vera-ttf/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2006/03/04 21:29:40 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2006/07/22 19:49:11 abs Exp $
 #
 
 DISTNAME=	ttf-bitstream-vera-1.10
@@ -12,18 +12,19 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.gnome.org/fonts/
 COMMENT=	Bitstream Vera TrueType fonts
 
+PKG_DESTDIR_SUPPORT=	user-destdir
+
 USE_X11BASE=	YES
 NO_CONFIGURE=	YES
 NO_BUILD=	YES
 
+INSTALLATION_DIRS=	lib/X11/fonts/TTF \
+			share/doc/vera-ttf share/examples/vera-ttf
 FONTS_DIRS.ttf=	${PREFIX}/lib/X11/fonts/TTF
 
 do-install:
-	${INSTALL_DATA_DIR} ${FONTS_DIRS.ttf}
-	cd ${WRKSRC} && ${PAX} -rw -pm *.ttf ${FONTS_DIRS.ttf}
-	${INSTALL_DATA_DIR} ${PREFIX}/share/examples/vera-ttf
-	${INSTALL_DATA} ${WRKSRC}/local.conf ${PREFIX}/share/examples/vera-ttf
-	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/vera-ttf
-	cd ${WRKSRC} && ${INSTALL_DATA} *.TXT ${PREFIX}/share/doc/vera-ttf
+	cd ${WRKSRC} && ${PAX} -rw -pm *.ttf ${DESTDIR}${FONTS_DIRS.ttf}
+	${INSTALL_DATA} ${WRKSRC}/local.conf ${DESTDIR}${PREFIX}/share/examples/vera-ttf
+	cd ${WRKSRC} && ${INSTALL_DATA} *.TXT ${DESTDIR}${PREFIX}/share/doc/vera-ttf
 
 .include "../../mk/bsd.pkg.mk"
