--- a/meta-pkgs/Makefile
+++ b/meta-pkgs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.35 2006/08/04 11:55:38 jmmv Exp $
+# $NetBSD: Makefile,v 1.36 2006/09/27 15:18:14 joerg Exp $
 #
 
 COMMENT=	Collections of other packages
@@ -13,6 +13,8 @@ SUBDIR+=	gnustep
 SUBDIR+=	gtk2-extras
 SUBDIR+=	kde3
 SUBDIR+=	matchbox
+SUBDIR+=	modular-xorg-drivers
+SUBDIR+=	modular-xorg-fonts
 SUBDIR+=	netbsd-doc
 SUBDIR+=	netbsd-doc-print
 SUBDIR+=	netbsd-www
