--- a/textproc/Markdown/Makefile
+++ b/textproc/Markdown/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/11/13 01:20:09 dan Exp $
+# $NetBSD: Makefile,v 1.2 2006/11/24 20:28:14 riz Exp $
 #
 
 DISTNAME=	Markdown_1.0.1
@@ -6,6 +6,7 @@ PKGNAME=	Markdown-1.0.1
 CATEGORIES=	textproc
 MASTER_SITES=	http://daringfireball.net/projects/downloads/
 EXTRACT_SUFX=	.zip
+DIST_SUBDIR=	${PKGNAME_NOREV}
 
 MAINTAINER=	dan@NetBSD.org
 HOMEPAGE=	http://daringfireball.net/projects/markdown/
