--- a/sysutils/xuvmstat/Makefile
+++ b/sysutils/xuvmstat/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2006/06/12 21:38:44 joerg Exp $
+# $NetBSD: Makefile,v 1.18 2006/06/15 13:31:29 wiz Exp $
 #
 
 DISTNAME=	${PKGNAME_NOREV:S/-//}
@@ -16,11 +16,10 @@ WRKSRC=		${WRKDIR}/xuvmstat
 
 INSTALLATION_DIRS=	bin
 
-.include "../../mk/x11.buildlink3.mk"
-
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/xuvmstat ${PREFIX}/bin
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/xuvmstat
 	${INSTALL_DATA} ${WRKSRC}/LICENSE ${PREFIX}/share/doc/xuvmstat
 
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
