--- a/emulators/vmware3/Makefile
+++ b/emulators/vmware3/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2007/01/01 22:43:50 adrianp Exp $
+# $NetBSD: Makefile,v 1.19 2007/01/07 09:13:53 rillig Exp $
 
 DISTNAME=	VMware-workstation-3.2.1-2242
 PKGNAME=	vmware-3.2.1pl1
@@ -25,7 +25,7 @@ DISTFILES+=	${VMWARE_BIN_PATCH}.tar.gz
 SITES.${VMWARE_BIN_PATCH}.tar.gz=	ftp://ftp.cvut.cz/vmware/obsolete/
 
 DEPENDS+=	vmware-module>=3.2.1.8:../../emulators/vmware-module3
-DEPENDS+=	suse_vmware>=6.4nb1:../../emulators/suse91_vmware
+DEPENDS+=	suse_vmware>=6.4nb1:../../emulators/${SUSE_DIR_PREFIX}_vmware
 
 LICENSE=	vmware-license
 
