--- a/shells/osh/Makefile
+++ b/shells/osh/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2006/10/17 12:31:22 obache Exp $
+# $NetBSD: Makefile,v 1.17 2007/03/26 16:43:34 reed Exp $
 
 DISTNAME=	osh-20070324
+PKGREVISION=	1
 CATEGORIES=	shells
 MASTER_SITES=	http://jneitzel.sdf1.org/osh/src/
 
@@ -13,6 +14,7 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 PKG_SHELL=		bin/osh
 
 BUILD_TARGET=	oshall
+INSTALL_TARGET=	install-oshall
 TEST_TARGET=	check
 
 MAKE_ENV+=	MANDIR=${PREFIX}/${PKGMANDIR}/man1
