--- a/mail/sympa/Makefile
+++ b/mail/sympa/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.24 2007/01/13 21:24:59 abs Exp $
+# $NetBSD: Makefile,v 1.25 2007/03/28 20:51:09 bouyer Exp $
 #
 
 DISTNAME=	sympa-5.2.4
 CATEGORIES=	mail
 MASTER_SITES=	http://www.sympa.org/distribution/
 
-MAINTAINER=	pkgsrc-users@NetBSD.org
+MAINTAINER=	bouyer@NetBSD.org
 HOMEPAGE=	http://www.sympa.org/
 COMMENT=	Mailing list manager
 
