--- a/net/wide-dhcpv6/Makefile
+++ b/net/wide-dhcpv6/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/03/19 17:32:07 taca Exp $
+# $NetBSD: Makefile,v 1.2 2007/03/24 19:21:30 joerg Exp $
 
 DISTNAME=	wide-dhcpv6-20061016
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=wide-dhcpv6/}
 
