--- a/www/firefox/Makefile.common
+++ b/www/firefox/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.16 2007/02/04 18:16:55 dmcmahill Exp $
+# $NetBSD: Makefile.common,v 1.17 2007/03/07 21:32:54 dmcmahill Exp $
 
 MOZ_DIST_VER?=		${MOZ_VER}
 DISTNAME?=		mozilla-${MOZ_DIST_VER}-source
@@ -199,6 +199,9 @@ pre-install:
 
 do-install:
 	${SETENV} ${SCRIPTS_ENV} DESTDIR=${DESTDIR} ${SH} ${FILESDIR:Q}/moz-install
+
+post-install:
+	${FIND} ${PREFIX}/lib/${MOZILLA}/defaults -type f -exec ${CHMOD} u+w {} \;
 
 .include "../../mk/pthread.buildlink3.mk"
 
