--- a/www/seamonkey/Makefile.common
+++ b/www/seamonkey/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.19 2007/02/20 16:02:11 dmcmahill Exp $
+# $NetBSD: Makefile.common,v 1.20 2007/03/07 21:32:56 dmcmahill Exp $
 
 MOZ_DIST_VER?=		${MOZ_VER}
 DISTNAME?=		seamonkey-${MOZ_DIST_VER}.source
@@ -203,6 +203,9 @@ pre-install:
 
 do-install:
 	${SETENV} ${SCRIPTS_ENV} ${SH} ${FILESDIR:Q}/moz-install
+
+post-install:
+	${FIND} ${PREFIX}/lib/${MOZILLA}/defaults -type f -exec ${CHMOD} u+w {} \;
 
 .include "../../mk/pthread.buildlink3.mk"
 
