--- a/multimedia/php-ming/Makefile
+++ b/multimedia/php-ming/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.3 2006/06/02 18:27:57 joerg Exp $
+# $NetBSD: Makefile,v 1.4 2006/06/04 16:26:54 joerg Exp $
 
 MODNAME=		ming
 CATEGORIES+=		multimedia
 
-MAINTAINER=		obata@lins.jp
+MAINTAINER=		obache@NetBSD.org
 COMMENT=		PHP extension for Ming library
 
 CONFLICTS=	php-ming-[0-9]*
