--- a/textproc/ruby-xmlscan/Makefile
+++ b/textproc/ruby-xmlscan/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2005/03/30 15:40:26 minskim Exp $
+# $NetBSD: Makefile,v 1.2 2006/07/20 13:48:14 jlam Exp $
 #
 
 DISTNAME=	xmlscan-${VER}
@@ -6,7 +6,7 @@ PKGNAME=	${RUBY_PKGPREFIX}-xmlscan-${VER}
 CATEGORIES=	textproc ruby
 MASTER_SITES=	http://www.blue.sky.or.jp/atelier/ruby/xmlscan/
 
-MAINTAINER=	obata@lins.jp
+MAINTAINER=	obache@NetBSD.org
 HOMEPAGE=	http://www.blue.sky.or.jp/atelier/ruby/xmlscan/
 COMMENT=	Pure Ruby XML parser
 
