--- a/graphics/digikamimageplugins/Makefile
+++ b/graphics/digikamimageplugins/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.23 2007/02/22 19:01:19 wiz Exp $
+# $NetBSD: Makefile,v 1.24 2007/03/13 10:11:22 drochner Exp $
 
 DISTNAME=		digikamimageplugins-0.9.1
+PKGREVISION=		1
 CATEGORIES=		graphics kde
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=digikam/}
 EXTRACT_SUFX=		.tar.bz2
