--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.273 2007/03/01 08:05:13 hira Exp $
+# $NetBSD: Makefile,v 1.274 2007/03/22 17:16:42 rillig Exp $
 #
 
 COMMENT=	Miscellaneous utilities
@@ -59,8 +59,6 @@ SUBDIR+=	gkrellm-launch
 SUBDIR+=	gkrellm-leds
 SUBDIR+=	gkrellm-moon
 SUBDIR+=	gkrellm-weather
-SUBDIR+=	gkrellm1-moon
-SUBDIR+=	gkrellm1-weather
 SUBDIR+=	gnome-dirs
 SUBDIR+=	gnome-user-docs
 SUBDIR+=	gnome1-dirs
