--- a/devel/guile-www/Makefile
+++ b/devel/guile-www/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.15 2006/02/05 23:08:43 joerg Exp $
+# $NetBSD: Makefile,v 1.16 2006/03/31 05:37:08 jlam Exp $
 
 DISTNAME=	guile-www-2.13
 PKGREVISION=	1
 CATEGORIES=	devel www
-MASTER_SITES=	http://www.glug.org/people/ttn/software/guile-www/
+MASTER_SITES=	http://www.gnuvola.org/software/guile-www/
 
 MAINTAINER=	gdt@NetBSD.org
-HOMEPAGE=	http://www.glug.org/people/ttn/software/guile-www/
+HOMEPAGE=	http://www.gnuvola.org/software/guile-www/
 #Before ttn maintainership, formerly 1.1.1 at
 #HOMEPAGE=	http://www.gnu.org/software/guile/
 COMMENT=	Guile WWW module
