--- a/mail/postfix-current/Makefile
+++ b/mail/postfix-current/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.77 2006/12/13 06:23:06 martti Exp $
+# $NetBSD: Makefile,v 1.78 2007/02/15 06:38:13 martti Exp $
 
 DISTNAME=	postfix-2.4-20070214
 #PKGREVISION=	1
@@ -153,7 +153,7 @@ do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/conf/post-install ${EXAMPLEDIR}
 	${INSTALL_SCRIPT} ${WRKSRC}/conf/postfix-script ${EXAMPLEDIR}
 	${INSTALL_DATA} ${WRKDIR}/mailer.conf ${EXAMPLEDIR}/mailer.conf
-	cd ${WRKSRC}; sh ./postfix-install -non-interactive		\
+	cd ${WRKSRC} && sh ./postfix-install -non-interactive		\
 		config_directory="${EXAMPLEDIR}"
 	${INSTALL_SCRIPT} ${WRKSRC}/auxiliary/qshape/qshape.pl \
 		${PREFIX}/sbin/qshape
