--- a/x11/libXfont/Makefile
+++ b/x11/libXfont/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2006/11/03 22:40:51 joerg Exp $
+# $NetBSD: Makefile,v 1.3 2007/01/23 15:49:37 joerg Exp $
 #
 
 DISTNAME=		libXfont-1.2.7
+PKGREVISION=		1
 CATEGORIES=		x11 devel fonts
 MASTER_SITES=		http://xorg.freedesktop.org/releases/individual/lib/
 EXTRACT_SUFX=		.tar.bz2
