--- a/wm/fluxbox/Makefile
+++ b/wm/fluxbox/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.40 2007/03/05 04:01:20 xtraeme Exp $
+# $NetBSD: Makefile,v 1.41 2007/03/22 21:40:40 xtraeme Exp $
 #
 
 DISTNAME=	fluxbox-1.0rc3
+PKGREVISION=	1
 CATEGORIES=	wm x11
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=fluxbox/}
 EXTRACT_SUFX=	.tar.bz2
