--- a/net/GeoIP/Makefile
+++ b/net/GeoIP/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.16 2006/06/05 16:38:40 tv Exp $
+# $NetBSD: Makefile,v 1.17 2006/09/05 21:03:58 tv Exp $
 #
 
 DISTNAME=	GeoIP-1.4.0
 CATEGORIES=	net
 MASTER_SITES=	http://www.maxmind.com/download/geoip/api/c/
 
-MAINTAINER=	tv@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.maxmind.com/download/geoip/api/c/
 COMMENT=	Find the country from any IP address
 
