--- a/meta-pkgs/gnuradio/Makefile.common
+++ b/meta-pkgs/gnuradio/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.6 2006/11/13 16:19:40 wulf Exp $
+# $NetBSD: Makefile.common,v 1.7 2007/02/22 19:26:48 wiz Exp $
 #
 # This Makefile fragment is included at the top of package Makefiles for
 # GNU Radio distributed packages (they all share common configure and build
@@ -19,7 +19,7 @@ GNU_CONFIGURE=	yes
 USE_LANGUAGES=	c c++
 USE_TOOLS+=	gmake automake autoconf pkg-config
 
-BUILD_DEPENDS+=doxygen>=1.4.7:../../devel/doxygen
+BUILD_DEPENDS+=doxygen>=1.5.1:../../devel/doxygen
 
 PY_PATCHPLIST=	yes
 PYTHON_VERSIONS_ACCEPTED=	24 23
