--- a/textproc/ruby-pure-hyperestraier/Makefile
+++ b/textproc/ruby-pure-hyperestraier/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/11/17 15:45:46 obache Exp $
 #
 
 .include "../../textproc/hyperestraier/Makefile.common"
@@ -6,8 +6,6 @@
 PKGNAME=	${RUBY_PKGPREFIX}-pure-hyperestraier-1.0.0.${HYPERESTRAIER_VERSION}
 CATEGORIES=	textproc ruby
 
-MAINTAINER=	obata@lins.jp
-HOMEPAGE=	http://hyperestraier.sourceforge.net/
 COMMENT=	Ruby pure interface of Hyper Estaier
 
 MY_SUBDIR=	rubypure
