--- a/emulators/peace/Makefile
+++ b/emulators/peace/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.24 2006/07/27 18:48:02 jlam Exp $
+# $NetBSD: Makefile,v 1.25 2007/02/22 19:26:27 wiz Exp $
 #
 PEACE_VERSION=	0.0.20060701
 DISTNAME=	peace-${PEACE_VERSION}
-SITES.peace-0.0.20060701.tar.gz=http://chiharu.hauN.org/peace/dist/
+#SITES.peace-0.0.20060701.tar.gz=http://chiharu.hauN.org/peace/dist/
 CATEGORIES=	emulators
 
 MAINTAINER=	kent@NetBSD.org
