--- a/lang/ruby18-base/Makefile
+++ b/lang/ruby18-base/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.30 2007/01/28 15:15:58 taca Exp $
+# $NetBSD: Makefile,v 1.31 2007/03/15 16:41:29 taca Exp $
 #
 
 DISTNAME=	${RUBY_DISTNAME}
+PKGREVISION=	1
 PKGNAME=	${RUBY_PKGPREFIX}-base-${RUBY_VERSION_SUFFIX}
 CATEGORIES=	lang ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
