--- a/games/wesnoth/Makefile
+++ b/games/wesnoth/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.35 2007/02/02 21:42:37 joerg Exp $
+# $NetBSD: Makefile,v 1.36 2007/02/22 19:30:03 wiz Exp $
 
-DISTNAME=	wesnoth-1.2.1
-PKGREVISION=	1
+DISTNAME=	wesnoth-1.2.3
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=wesnoth/}
+EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	wiz@NetBSD.org
 HOMEPAGE=	http://www.wesnoth.org/
